@@ -42,17 +42,17 @@ int main() {
   assert(s.isQueueEmpty());
   s.setSpeed(400);
   s.setAcceleration(1000);
-  s.manage();
+  s.fill_queue();
   assert(s.isQueueEmpty());
   s.move(steps);
-  s.manage();
+  s.fill_queue();
   assert(!s.isQueueEmpty());
   float old_planned_time_in_buffer = 0;
   int speed_increased = false;
   for (int i = 0; i < steps; i++) {
     if (!speed_increased && (s.getCurrentPosition() >= 5000)) {
       puts("Change speed");
-      s.manage();  // ensure queue is not empty
+      s.fill_queue();  // ensure queue is not empty
       speed_increased = true;
       s.setSpeed(300);
       s.move(steps);
@@ -68,7 +68,7 @@ int main() {
     if (!s.isRampGeneratorActive()) {
       break;
     }
-    s.manage();
+    s.fill_queue();
     uint32_t from_dt = rc.total_ticks;
     while (!s.isQueueEmpty()) {
       rc.check_section(
